# snaplet-riak-2

./: README.md  snaplet-riak-2.cabal
src/Snap/Snaplet/: .Riak.hs.un~  .RiakSnaplet.hs.un~  Riak.hs
