name:                snapletriak2
version:             0.1.0.0
synopsis:            Snaplet for Riak since snaplet-riak is dead
-- description:         
homepage:            TODO: change to github
license:             MIT
license-file:        LICENSE
author:              Christopher Biscardi
maintainer:          biscarch@sketcht.com
-- copyright:           
category:            Database, Snap
build-type:          Simple
cabal-version:       >=1.8

data-dir: resources

library
  hs-source-dirs: src

  exposed-modules:     
    Snap.Snaplet.Riak

  other-modules:       
    Paths_snapletriak2

  build-depends:
    base                ==4.6.*,
    configurator        >= 0.2 && < 0.3,
    snap                >= 0.10 && < 0.14,
    riak                == 0.7.0.2,
    text                >= 0.11.2  && < 0.12,
    MonadCatchIO-transformers  >= 0.3     && < 0.4,
    aeson               >= 0.6.1.0  && < 0.8,
    transformers        == 0.3.0.0,
    mtl                 == 2.1.2,
    bytestring          >= 0.10 && < 0.11